server/static/base.css
html {
  height: 100%;
}

body {
	font-family: 'Roboto', Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0;
  height: 100%;
  background-color: #131314;
  color:#fff;
}

/********************
Top level
********************/

#container {
  display: flex;
  flex-direction: row;
}

#grid {
  background-color: transparent;
  background-image: linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent);
  background-size: 2em 2em;
  flex: 3 0 0;
  position: relative;
}

#docs {
  flex: 1 0 0;
}

#darkLive > pre {
	font-family: monaco;
  font-size: 80%;
  margin: 0;
}

#darkErrors {
}


/********************
Entry (is also a node)
********************/

.entry > .inner {
  /* Put the entry node in front of all other nodes */
}

#search-container {
  position: relative;
}

#search-container input {
  padding: 2px;
  font-size: 1.1em;
  width: 200px;
}

#search-container br {
  padding-bottom: 10px;
}

#darkEntry {
  position: relative;
  color: #000;
  border: 1px solid #666;
  background: transparent;
}

#suggestion {
  position: absolute;
  top: 0;
  left: 0;
  color: #ccc;
  background: white;
  border: 1px solid #fff;
}

form {
  display: inline;
}

#autocomplete-holder {
  overflow-y: auto;
  max-height: 250px;
}

.autocomplete-item.highlighted {
  background: blue;
}
.autocomplete-item.greyed {
  color: grey;
}


/********************
Nodes
********************/
.node.functiondef > .inner {
  /* Ideally, we'd have the background of a function behind the edges but
  in front of the grid. Unfortunately, z-index on SVG is kinda hard, so
  I don't know how to make this work. */
  background: #252b2e;
  opacity: 0.35;
}

.node.functiondef.selected > .inner {
  background: #2e2525;
}

.node .inner {
  position: relative;
  top: -12px; /* space for params */
  box-sizing: border-box;
  border: 1px solid #444;
	padding: 0.8em 1em;
  font-size: 14px;
  background: #272728;
  display: inline-block;
  padding-top: 12px;
}

.node.functioncall .name, .node.value .name, node.page .name {
  display: block;
  text-align: center;
}

.node.functioncall .inner, .node.value .inner {
  border-radius: 2em;
  padding: 0.3em 0.3em;
  display: block;
}

.node.selected .inner, .node.selected {
  border-radius: 0.5em;
}

.selected .name {
  color: red;
}

.node.page .inner {
  border-radius: 1em;
  padding: 0.5em 1.7em;
  text-align: center;
}

.page .name {
  display: block;
  font-weight: bold;
  font-size: 1.37em;
  margin: 1em 0;
}

.datastore .name {
  display: block; /* extend the line for the full width of the node */
  font-weight: bold;
  font-size: 1.37em;
  margin: 0;
  border-bottom: 1px solid #777;
  padding-bottom: 0.25em;
}

.list {
  display: inline-block;
  margin-top: 0.5em;
	line-height: 1.5em;
}


/********************
Node Header
********************/

.header {
  top: -10px;
  float: left;
  position: absolute;
  left: 0;
  width: 100%;
}

.arg .header {
  width: 18px;
  top: 12px;
}

.return .header {
  top: -6px;
  position: relative;
}

.parameters {
  cursor: default;
  color: red;
  font-size: 8px;
  font-weight: bold;
}

.parameters .connected {
  color: #888;
}

.letter {
  margin-top: 2px;
  color: #999900;
  font-size: 12px;
  float: right;
}

/* Put it in the top right */
body .elm-overlay .elm-mini-controls {
  top: 0;
  bottom: auto;
  right: 0px;
}

